--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,22 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
+  font-family: "Rubik", "Arial" sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+  background-color: #fff;
+  color: #4a4b4c;
 }
 img {
   max-width: 100%;
   height: auto;
+}
+/* Container */
+.container {
+  width: 100%;
+  max-width: 1240px;
+  padding-left: 20px;
+  padding-right: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
