--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,26 @@ img {
   margin-right: 25px;
   background-color: #dce6ff;
 }
+/* GLOBAL SEARCH FORM */
+.global-search-form-input {
+  font-size: 14px;
+  line-height: normal;
+  border: 0;
+  border-radius: 60px;
+  padding-top: 15px;
+  padding-bottom: 13px;
+  padding-right: 20px;
+  padding-left: 40px;
+}
+
+.global-search-form {
+  margin-right: 25px;
+}
+/* OUTLINE STYLES */
+*:focus {
+  outline: 2px dashed #7296ec;
+  outline-offset: 3px;
+}
 
 /* LANGUAGE LINK */
 .lang-toggle-link {
