--- a/css/style.css
+++ b/css/style.css
@@ -214,3 +214,81 @@ img {
 .site-header-banner-link {
   display: flex;
 }
+
+/* MAIN CONTENT STYLES */
+.main-content {
+  flex-grow: 1;
+  padding-top: 50px;
+}
+
+
+/* GRID AND CARD STYLES */
+.news-grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -20px;
+}
+.news-grid-item {
+  width: 393px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+
+}
+.article-card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 15px;
+  padding: 20px 17px 15px;
+  background-color: #f6f6f6;
+}
+.article-card-title {
+  font-weight: 500;
+  line-height: 26px;
+  font-size: 20px;
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+.article-card-link {
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+}
+
+.article-card-link:hover{
+  color: #7296ec;
+}
+
+.article-card-link:active{
+  opacity: 0.6;
+}
+
+.article-card-text {
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+.atricle-card-img {
+  margin-top: auto;
+  display: block;
+  width: 360px;
+  height: 165px;
+  margin-bottom: 16px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.artice-card-footer {
+  display: flex;
+  align-items: center;
+}
+.atricle-card-source-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  border-radius: 5px;
+}
+.article-card-source-time {
+  font-size: 12px;
+  line-height: normal;
+  color : #5e5f61;
+}
+.article-card-sourse {
+}
