--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ img {
 }
 /* OUTLINE STYLES */
 *:focus {
-  outline: 2px dashed #7296ec;
+  outline: 2px dotted #7296ec;
   outline-offset: 3px;
 }
 
@@ -157,7 +157,7 @@ img {
   text-decoration: none;
   text-align: center;
   cursor: pointer;
-
+  border: 0;
 }
 
 /* ENTER BUTTON PRIMARY */
@@ -166,12 +166,17 @@ img {
   color: #fff;
 }
 
-.button-primary:hover{
+.button:hover{
   opacity: 0.8;
 }
 
-.button-primary:active{
+.button:active{
   opacity: 0.6;
+}
+
+.button-orange {
+  background-color: #f78b3b;
+  color: #fff;
 }
 
 /* SITENAV STYLES */
@@ -261,7 +266,6 @@ img {
 .article-card-link:active{
   opacity: 0.6;
 }
-
 .article-card-text {
   margin-top: 0;
   margin-bottom: 15px;
@@ -290,5 +294,21 @@ img {
   line-height: normal;
   color : #5e5f61;
 }
-.article-card-sourse {
+
+/* NOTIFICATION CTA STYLES */
+
+.notification-cta {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 25px 70px 25px 25px;
+  margin: 60px 75px;
+  background-color:#ffd7ba;
+  border-radius: 10px;
+}
+.notification-cta-text {
+  font-size: 20px;
+  line-height: 26px;
+  color: #000;
+  font-weight: 500;
 }
