--- a/css/style.css
+++ b/css/style.css
@@ -312,3 +312,54 @@ img {
   color: #000;
   font-weight: 500;
 }
+
+/* GLOBAL NEWS */
+
+.global-news-heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: normal;
+  color: #000;
+}
+.news-list {
+  display: flex;
+  flex-direction: column;
+}
+.news-list-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+/* ARTICLES CARD HORIZONTAL */
+
+.article-card-horizontal {
+  display: flex;
+  align-items: flex-start;
+  padding: 20px;
+  border-radius: 15px;
+  background-color: #f6f6f6;
+}
+.article-card-horizontal-img {
+  width: 210px;
+  height: 165px;
+  margin-right: 15px;
+  border-radius: 10px;
+  object-fit: cover;
+
+}
+.article-card-horizontal-content {
+}
+.article-card-horizontal-title {
+}
+.article-card-horizontal-text {
+}
+.article-card-horizontal-footer {
+  display: flex;
+}
+.article-card-horizontal-icon {
+}
+.article-card-source-time {
+}
+.article-card-horizontal-sourse {
+}
