--- a/css/style.css
+++ b/css/style.css
@@ -512,3 +512,110 @@ img {
   border-radius: 15px;
   object-fit: cover;
 }
+
+/* FOOTER STYLES */
+
+.site-footer {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #7297ef;
+  color: #fff;
+}
+
+.site-footer *:focus {
+  outline: 2px dashed #fff;
+}
+.site-footer-logo-wrapper {
+  display: flex;
+  margin-bottom: 15px;
+}
+.site-footer-logo {
+  display: flex;
+}
+
+.site-footer-logo:hover {
+  opacity: 0.8;
+}
+.site-footer-logo:active {
+  opacity: 0.6;
+}
+.site-footer-logo-img {
+  width: 264px;
+  height: 28px;
+  object-fit: contain;
+}
+.site-footer-about-links {
+  display: flex;
+
+}
+.site-footer-about-link {
+  width: 230px;
+  font-size: 12px;
+  line-height: 19px;
+  margin-right: 200px;
+}
+
+.site-footer-links-wrapper {
+  display: flex;
+  flex-grow: 1;
+}
+.site-footer-link {
+  width: 50%;
+  padding-left: 0;
+  padding-right: 40px;
+  margin: 0;
+  list-style: none;
+  font-weight: 500;
+}
+.site-footer-links-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.site-footer-link-list {
+  display: inline-block;
+  color: #fff;
+  text-decoration: none;
+}
+
+.site-footer-link-list:hover {
+  text-decoration: underline;
+}
+.site-footer-divider {
+  height: 1px;
+  border: 0;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  background-color: #cecece;
+}
+.site-footer-socials {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.site-footer-socials-heading {
+  width: 160px;
+  margin: 0;
+  line-height: 23px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 23px;
+}
+.site-footer-socials-list {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.site-footer-socials-item:not(:last-child) {
+  margin-right: 25px;
+}
+.site-footer-socials-link {
+  display: flex;
+}
+.site-footer-socials-icon {
+  flex-shrink: 0;
+  width: 25px;
+  height: 25px;
+  object-fit: contain;
+}
