Add contacts page

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,10 @@ img {
 .sitenav-item:not(:last-child) {
   margin-right: 33px;
 }
+
+.sitenav:not(:last-child) {
+  margin-bottom: 40px;
+}
 .sitenav-link {
   display: block;
   text-decoration: none;
@@ -619,3 +623,57 @@ img {
   height: 25px;
   object-fit: contain;
 }
+
+/* CONTACT PAGE */
+ .contact-page-heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  line-height: 29px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #000;
+ }
+
+ .contact-page-form {
+  display: flex;
+  flex-direction: column;
+  width: 696px;
+ }
+
+ /* FORM */
+
+ .form-group:not(:last-child) {
+  margin-bottom: 10px;
+ }
+
+ .form-field {
+  display: block;
+  width: 100%;
+  padding: 18px 20px;
+  border: 1px solid rgba(0,0,0,0.2);
+  border-radius: 10px;
+ }
+
+ .form-field-textarea {
+  min-height: 180px;
+  resize: vertical;
+ }
+
+ .form-groups-wrapper {
+  display: flex;
+  justify-content: space-between;
+ }
+
+ .form-groups-wrapper .form-group {
+  width: calc(50% - 5px);
+  margin-bottom: 0px;
+ }
+
+ .form-groups-wrapper:not(:last-child) {
+  margin-bottom: 10px;
+ }
+
+ .contact-page-form-submit {
+  margin-top: 20px;
+  align-self: flex-end;
+ }
