--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,10 @@ img {
   padding-bottom: 13px;
   padding-right: 20px;
   padding-left: 40px;
+  background-image: url(../img/search.svg);
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: 15px center ;
 }
 
 .global-search-form {
@@ -320,6 +324,10 @@ img {
   margin: 60px 75px;
   background-color:#ffd7ba;
   border-radius: 10px;
+  background-image: url(../img/Group.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 .notification-cta-text {
   font-size: 20px;
@@ -641,7 +649,38 @@ img {
   width: 696px;
 }
 
- /* FORM */
+/* DEFINITIONS CARD */
+
+.contact-page-definitions-card {
+}
+.definitions-card {
+  background-color: #f6f6f6;
+  color: #000;
+  padding: 20px 25px;
+  border-radius: 10px;
+  margin: 0;
+
+}
+.definitions-card-item {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.definitions-card-item:not(:last-child){
+  border-bottom: 1px solid #d2d2d2;
+}
+.definitions-card-title {
+  margin-bottom: 7px;
+  line-height: 24px;
+  font-size: 20px;
+  font-weight: 500;
+}
+.definitions-card-value {
+  margin: 0;
+  line-height: 19px;
+  font-size: 16px;
+}
+/* FORM */
 
 .form-group:not(:last-child) {
   margin-bottom: 10px;
@@ -677,4 +716,29 @@ img {
 .contact-page-form-submit {
   margin-top: 20px;
   align-self: flex-end;
+}
+
+.contact-page-content {
+  display: flex;
+}
+
+.contacts-page-info {
+  width: 494px;
+  margin-left: 10px;
+}
+
+/* RETINA BGS */
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+
+  .notification-cta {
+    background-image: url(../img/Group@2x.jpg);
+  }
+
 }
